# grimoirelab-perceval

./: .coverage  .flake8  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  CONTRIBUTING.md  MANIFEST.in  NEWS  README.md  analyze-github.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_tests.txt  setup.cfg  setup.py
.github/workflows/: changelog.yml  ci.yml  release.yml  tests.yml
docker/images/: Makefile  README.md
docs/: Makefile  README.md  conf.py  contributing.rst  howto_doc.rst  howto_pkg.rst  index.rst  requirements.txt
docs/perceval/: api-reference.rst  data-sources.rst  gerrit.md  git.md  github.md  gitlab.md  httpretty.md  intro.md  mail-archives.md  perceval-backends.md
docs/scripts/: perceval_gerrit_1.py  perceval_gerrit_2.py  perceval_git_1.py  perceval_git_counter.py  perceval_github_1.py  perceval_mbox_1.py
perceval/: __init__.py  _version.py  archive.py  archive_manager.py  backend.py  cache.py  client.py  errors.py  perceval.py  utils.py
perceval-snap/: perceval_0.8.0_source.tar.bz2
perceval-snap/prime/: command-perceval.wrapper
perceval-snap/snap/: snapcraft.yaml
perceval/backends/: __init__.py  askbot.py  bugzilla.py  bugzillarest.py  confluence.py  discourse.py  gerrit.py  git.py  github.py  gmane.py  jenkins.py  jira.py  kitsune.py  mbox.py  mediawiki.py  meetup.py  phabricator.py  pipermail.py  redmine.py  remo.py  remo2.py  stackexchange.py  supybot.py  telegram.py
releases/: 0.15.0.md  0.18.0.md  0.19.0.md  0.19.1.md  0.20.0-rc.1.md  0.20.0-rc.10.md  0.20.0-rc.11.md  0.20.0-rc.12.md  0.20.0-rc.13.md  0.20.0-rc.14.md  0.20.0-rc.15.md  0.20.0-rc.2.md  0.20.0-rc.3.md  0.20.0-rc.4.md  0.20.0-rc.5.md  0.20.0-rc.6.md  0.20.0-rc.7.md  0.20.0-rc.8.md  0.20.0-rc.9.md  0.20.0.md  0.20.1.md  0.21.0-rc.1.md  0.21.0-rc.2.md  0.21.0-rc.3.md  0.21.0.md  0.21.1.md  0.21.2-rc.1.md  0.21.2-rc.2.md  0.21.2-rc.3.md  0.21.2-rc.4.md  0.21.2-rc.5.md  0.21.2.md  0.21.3.md  0.21.4-rc.1.md  0.21.4-rc.2.md  0.21.4.md  0.21.5.md  0.21.6.md  0.21.7-rc.1.md  0.21.7.md  (+90 more)
releases/unreleased/: [bugzillarest]-api-key-authentication.yml  [confluence]-arguments-not-passed-to-'fetch_items'.yml  [phabricator]-new-blacklist-ids-argument-added.yml  add-rocket.chat-backend.yml  add-secrets-manager.yml  add-token-auth-for-jira.yml  blacklist-option-for-builds-in-jenkins.yml  check_bugzilla_type-on-custom-instance-fixed.yml  confluence-max_contents-per-query.yml  confluence-supports-fetch-by-spaces.yml  default-value-for-mbox-to-date.yml  drop-python-3.6-support.yml  drop-python-37-support.yml  fix-issue-#782.yml  fixed-missing-backend-name-in-usage-string.yml  git-backend-alternates-mechanism.yml  git-file-stats-with-whitespaces-were-not-assigned.yml  git-filename-with-brackets-issue.yml  github-api-not-returning-issues.yml  github-api-pagination-bug.yml  harden-xml-parsing-with-defusedxml.yml  hyperkitty-to-date.yml  include-recovery-mode-for-git-backend.yml  latest-dulwich-version-contains-a-bug.yml  mbox-to-date-argument-fixed.yml  mediawiki-pagination.yaml  nntp-backend-deprecated.yml  nntp-backend-removed.yml  patch-id-support.md  refactor-backend-fetch-logic.yml  rename-gitlab-url-argument.yml  slack-identifier-extraction-fixed.yml
snap/: snapcraft.yaml
tests/: .coverage  .test_github.py.swp  base.py  run_tests.py  test_archive.py  test_archive_manager.py  test_askbot.py  test_backend.py  test_bugzilla.py  test_bugzillarest.py  test_cache.py  test_client.py  test_confluence.py  test_discourse.py  test_dockerhub.py  test_errors.py  test_finosmeetings.py  test_gerrit.py  test_git.py  test_gitee.py  test_github.py  test_githubql.py  test_gitlab.py  test_gitter.py  test_gmane.py  test_googlehits.py  test_groupsio.py  test_hyperkitty.py  test_jenkins.py  test_jira.py  test_kitsune.py  test_launchpad.py  test_mattermost.py  test_mbox.py  test_mediawiki.py  test_meetup.py  test_nntp.py  test_pagure.py  test_phabricator.py  test_pipermail.py  (+14 more)
tests/data/: bugzilla_bug_activity.html  bugzilla_bug_activity_not_valid.html  bugzilla_buglist_next.csv  bugzilla_bugs_details.xml  bugzilla_no_version.xml  bugzilla_rest_bug_attachments.json  bugzilla_rest_bug_comments.json  bugzilla_rest_bug_history.json  bugzilla_rest_bugs.json  bugzilla_rest_bugs_empty.json  bugzilla_rest_bugs_history.json  bugzilla_version.xml  (+72 more)
(+442 files in other folders)
