[tool.poetry]
name = "perceval"
version = "0.17.4"
description = "Send Sir Perceval on a quest to fetch and gather data from software repositories."
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/chaoss/grimoirelab-perceval"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "perceval" },
    { include = "tests", format = "sdist" },
]

classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Intended Audience :: Science/Research",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab-perceval/issues"

[tool.poetry.dependencies]
python = "^3.6"

python-dateutil = "^2.6.0"
requests = "^2.7.0"
beautifulsoup4 = "^4.3.2"
feedparser = "^5.1.3"
dulwich = "^0.20.0"
urllib3 = "^1.22"
PyJWT = "^1.7.1"
cryptography = "^3.3.1"
grimoirelab-toolkit = "^0.1.12"

[tool.poetry.dev-dependencies]
httpretty = "^0.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
